@@ -53,6 +53,7 @@
     <grid name="T62_g16">
       <test name="ERI">
         <machine compiler="intel" testtype="aux_pop" testmods="pop/ecosys">yellowstone</machine>
+        <machine compiler="intel" testtype="aux_pop_MARBL" testmods="pop/ciso">yellowstone</machine>
         <machine compiler="intel" testtype="prealpha" testmods="pop/ecosys">yellowstone</machine>
       </test>
       <test name="ERS">
@@ -64,6 +65,9 @@
       </test>
       <test name="ERS_E_Lm3">
         <machine compiler="intel" testtype="aux_esmf" testmods="pop/default">yellowstone</machine>
+      </test>
+      <test name="ERS_Ld5_D">
+        <machine compiler="intel" testtype="aux_pop_MARBL" testmods="pop/ciso">yellowstone</machine>
       </test>
       <test name="ERS_Lm3">
         <machine compiler="pgi" testtype="prebeta" testmods="pop/ecosys">bluewaters</machine>
@@ -84,6 +88,8 @@
       <test name="ERS">
         <machine compiler="intel" testtype="aux_pop" testmods="pop/ecosys">yellowstone</machine>
         <machine compiler="intel" testtype="aux_pop" testmods="pop/ecosys_restore_gx3v7">yellowstone</machine>
+        <machine compiler="intel" testtype="aux_pop_MARBL" testmods="pop/ecosys_restore_gx3v7">yellowstone</machine>
+        <machine compiler="intel" testtype="aux_pop_MARBL" testmods="pop/ciso_transient">yellowstone</machine>
       </test>
       <test name="ERS_D_Ld3">
         <machine compiler="gnu" testtype="aux_pop_obgc_se" testmods="pop/ciso_abio_dic_dic14">userdefined</machine>
@@ -104,6 +110,9 @@
       </test>
       <test name="PET_D_Ld2">
         <machine compiler="gnu" testtype="aux_pop_obgc_se" testmods="pop/ecosys_restore_gx3v7">userdefined</machine>
+      </test>
+      <test name="SMS_D">
+        <machine compiler="intel" testtype="aux_pop_MARBL" testmods="pop/ecosys">yellowstone</machine>
       </test>
       <test name="SMS_D_Ld2">
         <machine compiler="gnu" testtype="aux_pop_obgc_se" testmods="pop/ecosys">userdefined</machine>
@@ -227,6 +236,7 @@
     <grid name="T62_g37">
       <test name="ERS">
         <machine compiler="pgi" testtype="aux_pop" testmods="pop/cice_ecosys">yellowstone</machine>
+        <machine compiler="intel" testtype="aux_pop_MARBL" testmods="pop/cice_ciso">yellowstone</machine>
       </test>
       <test name="ERS_Ld30">
         <machine compiler="intel" testtype="aux_pop" testmods="pop/ecosys">yellowstone</machine>
@@ -236,9 +246,11 @@
       </test>
       <test name="ERS_Ld5_D">
         <machine compiler="intel" testtype="aux_pop" testmods="pop/ciso_abio_dic_dic14">yellowstone</machine>
+        <machine compiler="intel" testtype="aux_pop_MARBL" testmods="pop/cice_ciso">yellowstone</machine>
       </test>
       <test name="SMS_D">
         <machine compiler="intel" testtype="aux_pop" testmods="pop/ecosys">yellowstone</machine>
+        <machine compiler="intel" testtype="aux_pop_MARBL" testmods="pop/cice_ecosys">yellowstone</machine>
       </test>
     </grid>
     <grid name="f19_g16_rx1">
