@@ -2,6 +2,18 @@ SVN $Id$
 SVN $URL$
 ===============================================================================
 Tag Creator: mlevy
+Developers:  mlevy
+Tag Date:    16 Sept 2015
+Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150916
+Tag Summary: * Refactor code to apply pressure correction in co2calc_column.F90
+             * Create new aux_pop_MARBL test list to reduce testing overhead
+               on MARBL-related branches
+
+Files Modified:
+M       cimetest/testlist_pop.xml
+M       source/co2calc_column.F90
+===============================================================================
+Tag Creator: mlevy
 Developers:  jwolfe
 Tag Date:    14 Sept 2015
 Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150914
